--- a/consumer/Dockerfile
+++ b/consumer/Dockerfile
@@ -6,6 +6,6 @@ WORKDIR /app
 COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY app.py ./
+COPY consume.py ./
 
-CMD ["python", "app.py"]
+CMD ["python", "consume.py"]
